--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Churrascômetro</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <h1>Churrascômetro</h1>
         <input type="number" name="adultos" id="adultos" placeholder="Adultos">
         <input type="number" name="criancas" id="criancas" placeholder="Crianças">
-        <input type="number" name="duracao" id="duracao" placeholder="Duração">
+        <input type="number" name="duracao" id="duracao" placeholder="Duração(h)">
         <button>Calcular</button>
 
         <div id="res"></div>
@@ -20,4 +21,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
