--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <title>Churrascômetro</title>
 </head>
 <body>
+    <div class="background">
 
+    </div>
     <div class="container">
         <h1>Churrascômetro</h1>
         <input type="number" name="adultos" id="adultos" placeholder="Adultos">
         <input type="number" name="criancas" id="criancas" placeholder="Crianças">
         <input type="number" name="duracao" id="duracao" placeholder="Duração(h)">
-        <button>Calcular</button>
-
-        <div id="res"></div>
-
+        <button onclick="calcular()">Calcular</button>
+<div id="res"></div>
     </div>
+    
+   
     <script src="script.js"></script>
 </body>
 </html> 
